# tbgclient

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: Makefile
docs/source/: conf.py  convenience.rst  index.rst  qna.rst  quickstart.rst
docs/source/summary/: modules.rst  tbgclient.api.rst  tbgclient.chat.rst  tbgclient.exceptions.rst  tbgclient.forum.rst  tbgclient.parsers.chat.rst  tbgclient.parsers.forum.rst  tbgclient.parsers.rst  tbgclient.protocols.chat.rst  tbgclient.protocols.forum.rst  tbgclient.protocols.rst  tbgclient.rst  tbgclient.session.rst
tbgclient/: Search.py  __init__.py  api.py  chat.py  exceptions.py  forum.py  parser.py  session.py
tbgclient/parsers/: __init__.py  chat.py  forum.py
tbgclient/protocols/: __init__.py  chat.py  forum.py
utils/: chat_client.py
