[project]
name = "tbgclient"
version = "0.5.1a0"
description = "Provides a way to get, post, and modify posts on the TBGs."
readme = "README.rst"
requires-python = ">= 3.10"
dependencies = [
    'requests~=2.32.3',
    'beautifulsoup4~=4.12.3',
    'typing-extensions',
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Communications",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/tbgers/tbgclient"

[build-system]
requires = ['setuptools >= 64.0', "wheel"]
build-backend = "setuptools.build_meta"
